# gwasqc

./: .gitignore  README.md  Snakefile  config.yaml  environment.yml  pyproject.toml  scratch.py  submit.sh
modules/: align_non_palindromic_variants.py  align_palindromic_variants.py  combine.py  filter_gwas.py  get_gnomad_ref.py  harmonize.py  mahalanobis.py  manhattan.py  scatter.py
modules/tests/: test_align_non_palindromic_variants.py  test_summary_stats.py
