[tool.poetry]
name = "gwas-qc"
version = "0.1.0"
description = ""
authors = ["sam-white04 <white.samantha@outlook.com>"]
readme = "README.md"
packages = [{include = "gwas_qc"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
snakemake = "^7.32.4"
black = "^23.11.0"
isort = "^5.12.0"
pandas = "^1.3.5"
dask = "^2023.12.0"
pylint = "^3.0.2"
scipy = "^1.11.4"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"
crossmap = "^0.6.6"
matplotlib = "^3.8.2"
polars = "^0.20.3"
qqman = "^1.0.6"
pyarrow = "^15.0.0"
numpy = "1.21.6"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
